# ore-stats-server

./: .env.example  .gitignore  Cargo.toml
migrations/: 20251019001_create_rounds.sql  20251019002_create_deployments.sql  20251025003_create_treasury.sql  20251025004_alter_rounds_winning_square.sql  20251025004_create_miners_snapshots.sql  20251025004_fix_deployments.sql  20251025005_alter_rounds_winning_square.sql  20251025005_create_deployment_idxs.sql  20251025006_create_round_deployment_idxs.sql  20251025006_fix_deploy.sql  20251025007_drop_treasury.sql  20251027007_migrate_snapshots.sql  20251027008_snapshot_idxs.sql  20251027009_create_miner_round_stats.sql  20251027010_create_miner_totals.sql  20251027011_backfill_round_stats_and_totals.sql  20251027012_miner_round_stats_idxs.sql  20251113013_miner_snapshot_pubkey_idx.sql
src/: app_state.rs  database.rs  entropy_api.rs  main.rs  rpc.rs
