[package]
name = "ore-stats-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
bincode = "1.3.3"
chrono = "0.4.42"
const-crypto = "0.3.0"
dotenvy = "0.15.7"
ore-api = { path = "../ore/api" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
solana-program = "^2.1"
solana-client = "^2.1"
solana-sdk = "^2.1"
spl-pod = "=0.5.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
steel = "4.0.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
solana-transaction-status = "3.0.4"
solana-commitment-config = "3.0.0"
solana-account-decoder-client-types = "=2.3.11"

